tooling/nargo_cli/tests/snapshots/execution_success/numeric_type_alias/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _73",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 4294967296 ]], outputs: [_1, _2]",
    "BLACKBOX::RANGE [_1]:222 bits []",
    "BLACKBOX::RANGE [_2]:32 bits []",
    "EXPR [ (1, _0) (-4294967296, _1) (-1, _2) 0 ]",
    "EXPR [ (-1, _1) (-1, _3) 5096253676302562286669017222071363378443840053029366383258766538131 ]",
    "BLACKBOX::RANGE [_3]:222 bits []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _1) 5096253676302562286669017222071363378443840053029366383258766538131 ]], outputs: [_4]",
    "EXPR [ (-1, _1, _4) (5096253676302562286669017222071363378443840053029366383258766538131, _4) (1, _5) -1 ]",
    "EXPR [ (-1, _1, _5) (5096253676302562286669017222071363378443840053029366383258766538131, _5) 0 ]",
    "EXPR [ (1, _2, _5) (268435455, _5) (-1, _6) 0 ]",
    "BLACKBOX::RANGE [_6]:32 bits []",
    "EXPR [ (1, _2) (-1, _7) 6 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _7) 4294967284 ], EXPR [ 4294967296 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [_9]:32 bits []",
    "EXPR [ (1, _7) (-4294967296, _8) (-1, _9) 4294967284 ]",
    "EXPR [ (-1, _8) 0 ]",
    "EXPR [ (-1, _10) 0 ]",
    "EXPR [ (-1, _11) 10 ]",
    "INIT (id: 0, len: 12, witnesses: [_10, _10, _10, _10, _10, _10, _10, _10, _10, _11, _10, _10])",
    "EXPR [ (1, _0) (-1, _12) 5 ]",
    "MEM (id: 0, write EXPR [ (1, _12) 0 ] at: EXPR [ (1, _7) 0 ]) ",
    "MEM (id: 0, read at: EXPR [ (1, _10) 0 ], value: EXPR [ (1, _13) 0 ]) ",
    "EXPR [ (-1, _14) 1 ]",
    "MEM (id: 0, read at: EXPR [ (1, _14) 0 ], value: EXPR [ (1, _15) 0 ]) ",
    "EXPR [ (-1, _16) 2 ]",
    "MEM (id: 0, read at: EXPR [ (1, _16) 0 ], value: EXPR [ (1, _17) 0 ]) ",
    "EXPR [ (-1, _18) 3 ]",
    "MEM (id: 0, read at: EXPR [ (1, _18) 0 ], value: EXPR [ (1, _19) 0 ]) ",
    "EXPR [ (-1, _20) 4 ]",
    "MEM (id: 0, read at: EXPR [ (1, _20) 0 ], value: EXPR [ (1, _21) 0 ]) ",
    "EXPR [ (-1, _22) 5 ]",
    "MEM (id: 0, read at: EXPR [ (1, _22) 0 ], value: EXPR [ (1, _23) 0 ]) ",
    "EXPR [ (-1, _24) 6 ]",
    "MEM (id: 0, read at: EXPR [ (1, _24) 0 ], value: EXPR [ (1, _25) 0 ]) ",
    "EXPR [ (-1, _26) 7 ]",
    "MEM (id: 0, read at: EXPR [ (1, _26) 0 ], value: EXPR [ (1, _27) 0 ]) ",
    "EXPR [ (-1, _28) 8 ]",
    "MEM (id: 0, read at: EXPR [ (1, _28) 0 ], value: EXPR [ (1, _29) 0 ]) ",
    "EXPR [ (-1, _30) 9 ]",
    "MEM (id: 0, read at: EXPR [ (1, _30) 0 ], value: EXPR [ (1, _31) 0 ]) ",
    "MEM (id: 0, read at: EXPR [ (1, _11) 0 ], value: EXPR [ (1, _32) 0 ]) ",
    "EXPR [ (-1, _33) 11 ]",
    "MEM (id: 0, read at: EXPR [ (1, _33) 0 ], value: EXPR [ (1, _34) 0 ]) ",
    "EXPR [ (-1, _15) (1, _21) (-1, _35) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _35) 0 ]], outputs: [_36]",
    "EXPR [ (1, _35, _36) (1, _37) -1 ]",
    "EXPR [ (1, _35, _37) 0 ]",
    "EXPR [ (-1, _17) (1, _29) (-1, _38) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _38) 0 ]], outputs: [_39]",
    "EXPR [ (1, _38, _39) (1, _40) -1 ]",
    "EXPR [ (1, _38, _40) 0 ]",
    "EXPR [ (1, _15) (-1, _19) (-1, _41) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _41) 0 ]], outputs: [_42]",
    "EXPR [ (1, _41, _42) (1, _43) -1 ]",
    "EXPR [ (1, _41, _43) 0 ]",
    "EXPR [ (1, _37, _40) (-1, _44) 0 ]",
    "EXPR [ (-1, _21) (1, _23) (-1, _45) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _45) 0 ]], outputs: [_46]",
    "EXPR [ (1, _45, _46) (1, _47) -1 ]",
    "EXPR [ (1, _45, _47) 0 ]",
    "EXPR [ (1, _43, _44) (-1, _48) 0 ]",
    "EXPR [ (-1, _23) (1, _31) (-1, _49) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _49) 0 ]], outputs: [_50]",
    "EXPR [ (1, _49, _50) (1, _51) -1 ]",
    "EXPR [ (1, _49, _51) 0 ]",
    "EXPR [ (1, _47, _48) (-1, _52) 0 ]",
    "EXPR [ (1, _17) (-1, _25) (-1, _53) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _53) 0 ]], outputs: [_54]",
    "EXPR [ (1, _53, _54) (1, _55) -1 ]",
    "EXPR [ (1, _53, _55) 0 ]",
    "EXPR [ (1, _51, _52) (-1, _56) 0 ]",
    "EXPR [ (1, _25) (-1, _27) (-1, _57) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _57) 0 ]], outputs: [_58]",
    "EXPR [ (1, _57, _58) (1, _59) -1 ]",
    "EXPR [ (1, _57, _59) 0 ]",
    "EXPR [ (1, _55, _56) (-1, _60) 0 ]",
    "EXPR [ (-1, _29) (1, _32) (-1, _61) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _61) 0 ]], outputs: [_62]",
    "EXPR [ (1, _61, _62) (1, _63) -1 ]",
    "EXPR [ (1, _61, _63) 0 ]",
    "EXPR [ (1, _59, _60) (-1, _64) 0 ]",
    "EXPR [ (1, _19) (-1, _31) (-1, _65) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _65) 0 ]], outputs: [_66]",
    "EXPR [ (1, _65, _66) (1, _67) -1 ]",
    "EXPR [ (1, _65, _67) 0 ]",
    "EXPR [ (1, _63, _64) (-1, _68) 0 ]",
    "EXPR [ (1, _27) (-1, _32) (-1, _69) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _69) 0 ]], outputs: [_70]",
    "EXPR [ (1, _69, _70) (1, _71) -1 ]",
    "EXPR [ (1, _69, _71) 0 ]",
    "EXPR [ (1, _67, _68) (-1, _72) 0 ]",
    "EXPR [ (1, _71, _72) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _21) (1, _27) (-1, _29) (1, _31) 0 ]], outputs: [_73]",
    "EXPR [ (-1, _21, _73) (1, _27, _73) (-1, _29, _73) (1, _31, _73) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
